2013-06-21  Tobias Burnus  <burnus@net-b.de>

	* trans-array.c (gfc_trans_deferred_array): Call the
	finalizer for nonallocatable local variables.
	* trans-decl.c (gfc_get_symbol_decl): Add local
	finalizable vars to the deferred list.
	(gfc_trans_deferred_vars): Call gfc_trans_deferred_array
	for those.

2013-06-21  Tobias Burnus  <burnus@net-b.de>

	* trans-array.c (gfc_alloc_allocatable_for_assignment): Allocate
	at least one byte.
	* trans-expr.c (alloc_scalar_allocatable_for_assignment): Ditto.

2013-06-20  Tobias Burnus  <burnus@net-b.de>

	* resolve.c (get_temp_from_expr): Don't set FL_VARIABLE twice.

2013-06-17  Tobias Burnus  <burnus@net-b.de>

	* gfortran.h (gfc_option_t): Add fpe_summary.
	* gfortran.texi (_gfortran_set_options): Update.
	* invoke.texi (-ffpe-summary): Add doc.
	* lang.opt (ffpe-summary): Add flag.
	* options.c (gfc_init_options, gfc_handle_option): Handle it.
	(gfc_handle_fpe_option): Renamed from gfc_handle_fpe_trap_option,
	also handle fpe_summary.
	* trans-decl.c (create_main_function): Update
	_gfortran_set_options call.

2013-06-15  Mikael Morin  <mikael@gcc.gnu.org>

	PR fortran/49074
	PR fortran/56136
	* dependency.c (gfc_check_argument_var_dependency): Return 0 in the
	array constructor case.

2013-06-14  Tobias Burnus  <burnus@net-b.de>

	PR fortran/57508
	* resolve.c (get_temp_from_expr): Don't copy function
	result attributes to temporary.

2013-06-14  Tobias Burnus  <burnus@net-b.de>

	PR fortran/57596
	* trans-decl.c (gfc_trans_deferred_vars): Honor OPTIONAL
	for nullify and deferred-strings' length variable.

2013-06-13  Mikael Morin  <mikael@gcc.gnu.org>

	PR fortran/49074
	* trans-expr.c (gfc_conv_variable): Don't walk the reference chain.
	Handle NULL array references.
	(gfc_conv_procedure_call): Remove code handling NULL array references.

2013-06-11  Tobias Burnus  <burnus@net-b.de>

	PR fortran/57535
	* trans-array.c (build_class_array_ref): Fix ICE for
	function result variables.
