@@ -1,3 +1,9 @@
+2013-06-24  Francois-Xavier Coudert  <fxcoudert@gcc.gnu.org>
+	    Dominique d'Humieres  <dominiq@lps.ens.fr>
+
+	PR fortran/52413
+	* gfortran.dg/fraction.f90: New.
+
 2013-06-24  Alan Modra  <amodra@gmail.com>
 
 	* gcc.target/powerpc/altivec-consts.c: Correct for little-endian.
@@ -30,6 +36,7 @@
 
 2013-06-21  Tobias Burnus  <burnus@net-b.de>
 
+	PR fortran/37336
 	* gfortran.dg/finalize_17.f90: New.
 
 2013-06-21  Tobias Burnus  <burnus@net-b.de>
